--- a/PROYECTO8/src/views/borrarUsuario.html
+++ b/PROYECTO8/src/views/borrarUsuario.html
@@ -5,8 +5,8 @@
     <title>Borrar Usuario</title>
     <link rel="stylesheet" href="formulario.css">
   </head>
-  <body style="background-color:#EEE8AA;">
-  <h1><font color="black">BORRAR USUARIO</font></h1>
+  <body>
+  <h1>Borrar usuario</h1>
     <form action="listadoBorrar.php" method="post" onsubmit="return validar()">
       Seguro que quieres borrarlo? <input type="submit" name="BORRAR" id="boton" value="BORRAR">
       <input type="hidden" name="id" value="<?= $_GET["id"]?>">
