--- a/PROYECTO8/src/views/insertarUsuario.html
+++ b/PROYECTO8/src/views/insertarUsuario.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Insertar Usuarios</title>
-    <link rel="stylesheet" href="formulario.css">
+    <title>Gestion de usuarios</title>
+    <link rel="stylesheet" href="css/formulario.css">
 </head>
-<body style="background-color:#EEE8AA;">
-<h1><font color="black">INSERTAR USUARIO</font></h1>
-<!-- aqui importabas el conexion.php    . Te lo he quitado porque asi no sirve para nada-->
+<body>
+<h1>Insertar usuario</h1>
+<div class="actions"><a href="index.php">Home</a></div>
 <script src="validar.js" charset="utf-8"></script>
     <form action="listadoInsertar.php" method="post" onsubmit="return validar();">
       <input type="text" id="nombre" name="nombre" placeholder="Nombre">
